--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Dummy Build\" && exit 0",
     "start": "node index.js",
     "serve": "node local.js"
   },
