--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "nextjs-exptress",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build.js",
-    "start": "node index.js",
-    "serve": "node local.js"
+    "start": "node server",
+    "serve": "node local"
   },
   "keywords": [],
   "author": "",
