--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
   "version": 2,
-  "build*": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "server.js"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
