--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.8.0",
     "express": "^4.21.2"
   },
   "devDependencies": {
