--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "vercel": "^41.6.0"
   },
   "devDependencies": {
