--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "moment": "^2.30.1",
+    "tailwindcss": "^4.1.6",
     "vercel": "^41.6.0"
   },
   "devDependencies": {
