--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo ok",
+    "build": "tsc",
     "start": "node index",
     "serve": "node index"
   },
