--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "echo \"ok\"",
+    "tsc": "tsc",
     "start": "node index",
     "serve": "node index"
   },
