--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     // "rootDir": "./" /* Specify the root folder within your source files. */,
-    "outDir": "./build" /* Specify an output folder for all emitted files. */,
+    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
 
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
